--- a/src/Welcomepage/Authentication.css
+++ b/src/Welcomepage/Authentication.css
@@ -72,7 +72,7 @@
     align-items: center;
     justify-content: center;
     background: #343a40;
-    color: white;
+    color: white !important;
     padding: 10px;
   }
   
