--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -61,12 +61,12 @@
   #form input:focus,
   #form select:focus {
     outline: none;
-    border-color: #007bff;
+    border-color:linear-gradient(135deg, #6e8efb, #a777e3);
     background-color: #fff;
   }
   
   #form button[type="submit"] {
-    background-color: #007bff;
+     background: linear-gradient(135deg, #4b6cb7, #5b4b8a); 
     color: white;
     padding: 12px 25px;
     border: none;
@@ -79,7 +79,7 @@
   }
   
   #form button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color:linear-gradient(135deg, #6e8efb, #a777e3);
   }
   
  
