--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -21,16 +21,21 @@
     font-size: 28px;
 }
 #formconatiner button {
-    background-color: #4b91d3;
-    color: #ffffff;
-    border: none;
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-top: 10px;
-    transition: background-color 0.3s ease;
+  background-color: white;
+  color: #a777e3; 
+  border: 2px solid #a777e3;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-top: 10px;
+  font-weight: 500;
+  transition: all 0.3s ease;
 }
+
 #formconatiner button:hover {
-    background-color: #357ab8;
+  background-color: #9c5dea; 
+  color: white;
+  border-color: #a777e3;
 }
+
